<?xml version="1.0"?>
<package format="2">

    <name>cpp_test</name>
    <version>0.0.0</version>

    <description>Test and learning library of cpp</description>

    <maintainer email="supasna.k@ku.th">Supasan Komonlit</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
