<?xml version="1.0"?>
<package format="2">

    <name>subscriber_ros</name>
    <version>0.0.0</version>
    <description>This use to testing subscribe in ros system</description>

    <maintainer email="supasan.k@ku.th">Supasan Komonlit</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
